--- a/styles.scss
+++ b/styles.scss
@@ -88,6 +88,7 @@ label[for="file-upload"] {
   width: 100%;
   max-width: 638px;
   margin: 0 auto;
+  padding-bottom: 60px;
 
   p {
     text-align: unset;
@@ -230,6 +231,48 @@ label[for="file-upload"] {
       font-style: normal;
       font-weight: 400;
       line-height: 176.523%;
+    }
+  }
+  .json-pagination {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: rgb(0 0 0 / 13%);
+    padding: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 1.5rem;
+    gap: 10px;
+    height: 60px;
+
+    .json-pagination-button {
+      cursor: pointer;
+      width: 150px;
+      padding: 6px 12px;
+      border-radius: 5px;
+      border: 1px solid #000;
+      opacity: 0.7;
+      background: linear-gradient(180deg, #E4E4E4 0%, #F7F7F7 100%);
+      font-size: 1.5rem;
+      font-family: Inter;
+    }
+  }
+  .json-pagination-stats {
+    position: absolute;
+    right: 0;
+    top: 0;
+    border-radius: 5px;
+    opacity: .7;
+    background: linear-gradient(180deg, #E4E4E4 0%, #F7F7F7 100%);
+    font-size: 15px;
+    font-family: Inter;
+    padding: 5px 15px;
+
+    p {
+      margin: 0;
     }
   }
 }
